--- a/.github/workflows/run-karate-tests.yml
+++ b/.github/workflows/run-karate-tests.yml
@@ -50,7 +50,7 @@ jobs:
         distribution: 'oracle'
         
     - name: Run Karate with Java
-
+      working-directory: src/webClient
       run: java -jar karate-1.4.1.jar -t @${{ inputs.api }} -t @smoke -e ''${{ inputs.env }}' | '${{secrets.API_KEY}}' | '${{secrets.FAKE_KEY}}' | 'localDev =${{secrets.CLD}}' | 'localStg =${{secrets.CLS}}'' ccte-api -o ccte-api/reports/
 
  
