--- a/.github/workflows/run-karate-tests.yml
+++ b/.github/workflows/run-karate-tests.yml
@@ -51,7 +51,7 @@ jobs:
         
     - name: Run Karate with Java
       working-directory: src/webClient
-      run: java -jar karate-1.4.1.jar -t @${{ inputs.api }} -t @smoke -e ''${{ inputs.env }}' | '${{secrets.API_KEY}}' | '${{secrets.FAKE_KEY}}' | '${{secrets.CLD}}' | '${{secrets.CLS}}'' ccte-api -o ccte-api/reports/
+      run: java -jar karate-1.4.1.jar -t @${{ inputs.api }} -t @smoke -e ''${{ inputs.env }}' | '${{secrets.API_KEY}}' | '${{secrets.FAKE_KEY}}' | "${{secrets.CLD}}" | "${{secrets.CLS}}"' ccte-api -o ccte-api/reports/
 
  
   result:
