--- a/.github/workflows/run-karate-tests.yml
+++ b/.github/workflows/run-karate-tests.yml
@@ -50,7 +50,7 @@ jobs:
         distribution: 'oracle'
         
     - name: Run Karate with Java
-      run: java -jar karate-1.4.1.jar -t @${{ inputs.api }} -t @smoke -e ''${{ inputs.env }}' | '${{secrets.API_KEY}}' | '${{secrets.FAKE_KEY}}' | "${{secrets.CLD}}" | "${{secrets.CLS}}"' ccte-api -o ccte-api/reports/
+      run: java -jar karate-1.4.1.jar -t @${{ inputs.api }} -t @smoke -e ''${{ inputs.env }}' | '${{secrets.API_KEY}}' | '${{secrets.FAKE_KEY}}' | ${{secrets.CLD}} | ${{secrets.CLS}}' ccte-api -o ccte-api/reports/
 
  
   result:
