--- a/.github/workflows/run-karate-tests.yml
+++ b/.github/workflows/run-karate-tests.yml
@@ -70,7 +70,7 @@ jobs:
       if: ${{ always() }}
       with:
     # Artifact name
-        name: ${{ inputs.api-selection }} ${{ inputs.test }} Result ${{ steps.date.outputs.date }}
+        name: ${{ inputs.api }} Smoke Result ${{ steps.date.outputs.date }}
     # A file, directory or wildcard pattern that describes what to upload
         path: ccte-api/target
         
