--- a/.github/workflows/run-karate-tests.yml
+++ b/.github/workflows/run-karate-tests.yml
@@ -72,7 +72,7 @@ jobs:
     # Artifact name
         name: ${{ inputs.api }} Smoke Result ${{ steps.date.outputs.date }}
     # A file, directory or wildcard pattern that describes what to upload
-        path: karate-summary-json.txt
+        path: ccte-api/target/karate-summary-json.txt
         
   clean-up:
    runs-on: th878
