--- a/.github/workflows/run-karate-tests.yml
+++ b/.github/workflows/run-karate-tests.yml
@@ -73,6 +73,14 @@ jobs:
         name: ${{ inputs.api }} Smoke Result ${{ steps.date.outputs.date }}
     # A file, directory or wildcard pattern that describes what to upload
         path: ccte-api/target/karate-reports/karate-summary-json.txt
+
+    - name: Create Karate Test Summary
+      uses: irongut/CodeCoverageSummary@v1.3.0
+      with: 
+         filename: karate-summary-json.txt
+         badge: true
+         format: markdown
+         output: both
         
   clean-up:
    runs-on: th878
