--- a/.github/workflows/run-karate-tests.yml
+++ b/.github/workflows/run-karate-tests.yml
@@ -75,12 +75,11 @@ jobs:
         path: ccte-api/target/karate-reports/karate-summary-json.txt
 
     - name: Create Karate Test Summary
-      uses: irongut/CodeCoverageSummary@v1.3.0
+      uses: test-summary/action@dist
       with: 
          filename: karate-summary-json.txt
-         badge: true
-         format: markdown
-         output: both
+         if: ${{ always() }}
+
         
   clean-up:
    runs-on: th878
