--- a/.github/workflows/run-karate-tests.yml
+++ b/.github/workflows/run-karate-tests.yml
@@ -74,6 +74,10 @@ jobs:
     # A file, directory or wildcard pattern that describes what to upload
         path: ccte-api/target/karate-reports/karate-summary-json.txt
         
+    - name: Display
+      run: |
+        echo karate-summary-json.txt >> $GITHUB_STEP_SUMMARY
+        
   clean-up:
    runs-on: th878
    needs: result
