--- a/.github/workflows/run-karate-tests.yml
+++ b/.github/workflows/run-karate-tests.yml
@@ -74,9 +74,9 @@ jobs:
     # A file, directory or wildcard pattern that describes what to upload
         path: ccte-api/target/karate-reports/karate-summary-json.txt
         
-    - name: Display
+    - name: Display Test Summary
       run: |
-        echo karate-summary-json.txt >> $GITHUB_STEP_SUMMARY
+        echo "### Karate Results" >> $GITHUB_STEP_SUMMARY
         
   clean-up:
    runs-on: th878
