--- a/.github/workflows/run-karate-tests.yml
+++ b/.github/workflows/run-karate-tests.yml
@@ -72,11 +72,12 @@ jobs:
     # Artifact name
         name: ${{ inputs.api }} Smoke Result ${{ steps.date.outputs.date }}
     # A file, directory or wildcard pattern that describes what to upload
-        path: ccte-api/target/karate-reports/karate-summary-json.txt
+        path: | 
+         ccte-api/target/karate-reports/karate-summary-json.txt
+         ccte-api/target/karate-reports/res
+         ccte-api/target/karate-reports/karate-summary.html
+         ccte-api/target/karate-reports/karate-labs-logo-ring.svg
         
-    - name: Display Test Summary
-      run: |
-        echo "### Karate Results" >> $GITHUB_STEP_SUMMARY
         
   clean-up:
    runs-on: th878
