--- a/.github/workflows/run-karate-tests.yml
+++ b/.github/workflows/run-karate-tests.yml
@@ -66,6 +66,7 @@ jobs:
       
         
     - name: Upload a Build Artifact
+      id: results
       uses: actions/upload-artifact@v4.3.1      
       if: ${{ always() }}
       with:
@@ -79,14 +80,7 @@ jobs:
          ccte-api/target/karate-reports/karate-labs-logo-ring.svg
          
     - name: Summary Display
-      uses: karol-brejna-i/webpage-screenshot-action@v1
-      with: 
-        url: ccte-api/target/karate-reports/karate-summary.html
-    - uses: actions/upload-artifact@v4.3.1 
-      with: 
-         name: simple-screenshot
-         path: ${{ github.workspace }}/*png
-    - run: echo '${{ github.workspace }}/*png' >> $GITHUB_STEP_SUMMARY
+    - run: echo '${{ steps.results.outcome }}>> $GITHUB_STEP_SUMMARY
 
   clean-up:
    runs-on: th878
