--- a/.github/workflows/run-karate-tests.yml
+++ b/.github/workflows/run-karate-tests.yml
@@ -63,7 +63,6 @@ jobs:
     - name: Get current date
       id: date
       run: echo "date=$(TZ=":EST" date +'%Y-%m-%d %H.%MEST')" >>$GITHUB_OUTPUT
-      
         
     - name: Upload a Build Artifact
       id: results
@@ -78,13 +77,10 @@ jobs:
          ccte-api/target/karate-reports/res
          ccte-api/target/karate-reports/karate-summary.html
          ccte-api/target/karate-reports/karate-labs-logo-ring.svg
-         
-    - name: Summary Display
-      uses: actions/upload-artifact@v4.3.1 
-      with:
-        path: ccte-api/target/karate-reports/karate-summary.html
-    - run: echo '${{ steps.results.outcome }}>> $GITHUB_STEP_SUMMARY
 
+    - name: Summary Display
+      run: echo '${{ steps.results.outcome }}>> $GITHUB_STEP_SUMMARY  
+         
   clean-up:
    runs-on: th878
    needs: result
