--- a/.github/workflows/run-karate-tests.yml
+++ b/.github/workflows/run-karate-tests.yml
@@ -48,8 +48,8 @@ jobs:
     - name: Set up JDK 21
       uses: actions/setup-java@v5
       with:
-        java-version: '21'
-        distribution: 'microsoft'
+        java-version: '21.0.8'
+        distribution: 'temurin'
         
     - name: Run Karate with Java
       run: java -Dkey=${{secrets.API_KEY}} -Dfake=${{secrets.FAKE_KEY}} -DlocalDev=${{secrets.CLD}} -DlocalStg=${{secrets.CLS}} -DhostDev=${{secrets.HD}} -DhostStg=${{secrets.HS}} -jar karate-1.4.1.jar -t @${{ inputs.api }} -t @smoke -e ${{ inputs.env }} ccte-api -o ccte-api/target/
